--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -73,5 +73,5 @@ ul li:hover svg {
 
 .secondary-page-footer > * {
   margin-inline: 0;
-  width: 100vw;
+  width: 100%;
 }
